fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,5 @@
 body {
     font-family: var(--body-font);
     font-size: 18px;
+    background-color: var(--main-area-gray);
 }
