--- a/src/components/Layout/GrayFlex.module.css
+++ b/src/components/Layout/GrayFlex.module.css
@@ -2,4 +2,5 @@
 
 .gray-bg_area {
     background-color: var(--cyan);
+    margin-top: 120px;
 }
