--- a/src/components/ShortenerArea/ShortenerArea.module.css
+++ b/src/components/ShortenerArea/ShortenerArea.module.css
@@ -1,5 +1,6 @@
 @import url('../../assets/styles/variables.css');
 
 .shortener-area {
-    background-color: var(--main-area-gray);
+    position: relative;
+    bottom: 5rem;
 }
